@@ -1,0 +1,38 @@
+.. api.rst
+
+Interfaces
+==========
+
+.. autointerface:: collective.geo.geographer.interfaces.IGeoreferenceable
+    :members:
+
+.. autointerface:: collective.geo.geographer.interfaces.IGeoreferenced
+    :members:
+
+.. autointerface:: collective.geo.geographer.interfaces.IWritableGeoreference
+    :members:
+
+.. autointerface:: collective.geo.geographer.interfaces.IWriteGeoreferenced
+    :members:
+
+.. autointerface:: collective.geo.geographer.interfaces.IGeoCoder
+    :members:
+
+.. autointerface:: collective.geo.geographer.interfaces.IGeoView
+    :members:
+
+
+Classes
+=======
+
+.. automodule:: collective.geo.geographer.geo
+    :members:
+
+.. automodule:: collective.geo.geographer.geoview
+    :members:
+
+.. automodule:: collective.geo.geographer.geocoder
+    :members:
+
+.. automodule:: collective.geo.geographer.event
+    :members:
