@@ -1,0 +1,24 @@
+.. Collective geo documentation master file, created by
+   sphinx-quickstart on Sun May  6 00:44:04 2012.
+   You can adapt this file completely to your liking, but it should at least
+   contain the root `toctree` directive.
+
+
+.. include:: ../collective/geo/geographer/README.rst
+
+
+Package documentation
+=====================
+
+.. toctree::
+    :maxdepth: 2
+
+    api
+
+
+Indices and tables
+==================
+
+* :ref:`genindex`
+* :ref:`modindex`
+* :ref:`search`
