@@ -1,0 +1,38 @@
+[buildout]
+extends = travis.cfg
+
+extensions =
+    mr.developer
+sources = sources
+
+auto-checkout = *
+always-checkout = force
+
+parts =
+    zopepy
+    sphinx
+
+
+[zopepy]
+recipe = zc.recipe.egg
+interpreter = zopepy
+# scripts = zopepy
+eggs =
+    ${instance:eggs}
+    repoze.sphinx.autointerface
+
+
+[sphinx]
+recipe = collective.recipe.sphinxbuilder
+interpreter = ${buildout:directory}/bin/zopepy
+sphinx-extensions =
+    sphinx.ext.autodoc
+    repoze.sphinx.autointerface
+sphinx-project = Collective Geo
+sphinx-author = Giorgio Borelli
+source = ${buildout:directory}/docs
+build = ${buildout:directory}/docs
+
+
+[versions]
+Sphinx = 1.1.3
